syntax = "proto3";
package proto;
option go_package = "./proto";

service InputPlugin {
  rpc SyncHighlights (Empty) returns (HighlightList);
}

service OutputPlugin {
  rpc SendNotification (HighlightList) returns (Empty);
}

message Empty {}

message Highlight {
  string id = 1;
  string book_title = 2;
  string book_author = 3;
  int32 book_location_start = 4;
  int32 book_location_end = 5;
  string created_at = 6;
  string content = 7;
}

message HighlightList {
  repeated Highlight highlights = 1;
}